# AIS4002_ServoControl

./: CMakeLists.txt  README.md  main.cpp
data/pantilt/: bottom.mtl  servo.mtl  upper.mtl
